--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Debugging uncompiled Typescript code running on Docker container using VS Code",
   "main": "index.ts",
   "scripts": {
-    "debug": "node -r ts-node/register --inspect=0.0.0.0:9229 src/index.ts",
-    "dev": "nodemon --inspect=0.0.0.0:9229 src/index.ts"
+    "start": "nodemon --inspect=0.0.0.0:9229 src/index.ts",
+    "test": "yarn jest"
   },
   "nodemonConfig": {
     "execMap": {
@@ -17,13 +17,18 @@
     "inversify": "^5.1.1",
     "inversify-express-utils": "^6.3.2",
     "inversify-inject-decorators": "^3.1.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "jest": "^29.3.1",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/inversify": "^2.0.33",
+    "@types/supertest": "^2.0.12",
+    "@jest/globals": "^29.3.1",
     "@types/inversify-express-utils": "^2.0.0",
     "@types/inversify-inject-decorators": "^2.0.0",
+    "ts-jest": "^29.0.5",
     "nodemon": "^2.0.7",
     "ts-node": "^8.9.1",
     "typescript": "^4.2.4"
